--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -7,19 +7,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dependencies\n",
+    "# Dependencies and Setup\n",
     "import matplotlib.pyplot as plt\n",
-    "import requests\n",
     "import pandas as pd\n",
-    "from api_keys import api_key\n",
-    "import random\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import requests\n",
+    "import time\n",
+    "from scipy.stats import linregress\n",
+    "\n",
+    "# Import API key\n",
+    "from api_keys import weather_api_key\n",
+    "\n",
+    "# Incorporated citipy to determine city based on latitude and longitude\n",
+    "from citipy import citipy\n",
+    "\n",
+    "# Output File (CSV)\n",
+    "output_data_file = \"output_data/cities.csv\"\n",
+    "\n",
+    "# Range of latitudes and longitudes\n",
+    "lat_range = (-90, 90)\n",
+    "lng_range = (-180, 180)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "f825cc2d",
+   "id": "8034257b",
    "metadata": {},
    "outputs": [
     {
@@ -32,23 +45,31 @@
     }
    ],
    "source": [
-    "# lat_range = np.arange(-90,90,.0001)\n",
-    "lat_sample = []\n",
-    "for i in np.arange(1,20,0.1):\n",
-    "    lat_sample.append(i)\n",
-    "print(len(lat_sample))    \n",
-    "print(lat_sample)    \n",
+    "# List for holding lat_lngs and cities\n",
+    "lat_lngs = []\n",
+    "cities = []\n",
     "\n",
-    "# sample_1 = random.sample(lat_sample, 4)\n",
+    "# Create a set of random lat and lng combinations\n",
+    "lats = np.random.uniform(lat_range[0], lat_range[1], size=1500)\n",
+    "lngs = np.random.uniform(lng_range[0], lng_range[1], size=1500)\n",
+    "lat_lngs = zip(lats, lngs)\n",
     "\n",
+    "# Identify nearest city for each lat, lng combination\n",
+    "for lat_lng in lat_lngs:\n",
+    "    city = citipy.nearest_city(lat_lng[0], lat_lng[1]).city_name\n",
+    "    \n",
+    "    # If the city is unique, then add it to a our cities list\n",
+    "    if city not in cities:\n",
+    "        cities.append(city)\n",
     "\n",
-    "#lat_sample = random.sample(lat_range, 5)\n"
+    "# Print the city count to confirm sufficient count\n",
+    "len(cities)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb1b50dd",
+   "id": "75008ef4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88aca4ed",
+   "id": "1fc38b60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca002dd6",
+   "id": "227ae5c9",
    "metadata": {},
    "outputs": [],
    "source": [
